añadiendo mejores efectos

--- a/informacion/templates/guia_exportador.html
+++ b/informacion/templates/guia_exportador.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block estilos_propios %}
-<link rel="stylesheet" href="{% static 'css/estilos_index.css' %}">
+<link rel="stylesheet" href="{% static 'css/estilos_guia.css' %}">
 {% endblock %}
 
 {% block contenido %}
