--- a/informacion/templates/boletines.html
+++ b/informacion/templates/boletines.html
@@ -29,11 +29,12 @@
         // http://stackoverflow.com/questions/123999/how-to-tell-if-a-dom-element-is-visible-in-the-current-viewport
         function isElementInViewport(el) {
             let rect = el.getBoundingClientRect();
+            let offset = 30;
             return (
                 rect.top >= 0 &&
                 rect.left >= 0 &&
-                rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-                rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+                rect.bottom - offset <= (window.innerHeight || document.documentElement.clientHeight) &&
+                rect.right - offset <= (window.innerWidth || document.documentElement.clientWidth)
             );
         }
 
