--- a/informacion/templates/guia_exportador.html
+++ b/informacion/templates/guia_exportador.html
@@ -7,17 +7,15 @@
 
 {% block contenido %}
 <div class="index-libros" id="index-libros">
-    {% for libro in guia %}
-    <div class="index-libros-seccion" style="background-color: {{ libro.color }};">
-        <a href="{{ MEDIA_URL }}{{ libro.archivo }}" target="_blank" rel="noopener noreferrer">
-            <img src="{{ MEDIA_URL }}{{ libro.portada }}">
+    <div class="index-libros-seccion" style="background-color: {{ guia.color }};">
+        <a href="{{ MEDIA_URL }}{{ guia.archivo }}" target="_blank" rel="noopener noreferrer">
+            <img src="{{ MEDIA_URL }}{{ guia.portada }}">
         </a>
         <div class="index-libros-explicacion">
-            <h1>{{ libro.titulo }}</h1>
-            <h2>{{ libro.subtitulo}}</h2>
-            <p>{{ libro.descripcion }}</p>
+            <h1>{{ guia.titulo }}</h1>
+            <h2>{{ guia.subtitulo}}</h2>
+            <p>{{ guia.descripcion }}</p>
         </div>
     </div>
-    {% endfor %}
 </div>
 {% endblock %}
