--- a/inicio/templates/base_generic.html
+++ b/inicio/templates/base_generic.html
@@ -88,7 +88,7 @@
                         <h2>Directorio de Brokers</h2>
                         <h3>Lista de contactos de Brokers verificados</h3>
                     </a>
-                    <a href="proveedores.html">
+                    <a href="{% url 'proveedores' %}">
                         <h2>Directorio de Proveedores</h2>
                         <h3>Lista de contactos de Proveedores verificados</h3>
                     </a>
